--- a/index.html
+++ b/index.html
@@ -26,26 +26,28 @@
 </head>
 
 <body>
-    <section class="card">
-        <div class="card__main-img-container">
-            <img src="./src/img/illustration-hero.svg" alt="dancing girl">
-        </div>
-        <h1 class="card__title">Order Summary</h1>
-        <p class="card__description">You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!</p>
-        <div class="card__plan-container">
-            <div class="card__music-icon-container">
-                <img src="./src/img/icon-music.svg" alt="note image">
+    <div class="box">
+        <section class="card">
+            <div class="card__main-img-container">
+                <img src="./src/img/illustration-hero.svg" alt="dancing girl">
+            </div>
+            <h1 class="card__title">Order Summary</h1>
+            <p class="card__description">You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!</p>
+            <div class="card__plan-container">
+                <div class="card__music-icon-container">
+                    <img src="./src/img/icon-music.svg" alt="note image">
+                </div>
                 <div class="card__plan">
                     <h2 class="card__plan-name">Annual Plan</h2>
                     <h3 class="card__plan-price">$59.99/year</h3>
                 </div>
                 <button class="card__plan-change">Change</button>
             </div>
-        </div>
-        <button class="card__proceed-button">Proceed to Payment</button>
-        <button class="card__cancel-button">Cancel Order</button>
-    </section>
+            <button class="card__proceed-button">Proceed to Payment</button>
+            <button class="card__cancel-button">Cancel Order</button>
+        </section>
 
+    </div>
 
     <div class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Your Name Here</a>.
