--- a/index.html
+++ b/index.html
@@ -1,39 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Interactive pricing component</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="./src/img/favicon-32x32.png">
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+    <title>Frontend Mentor | Interactive pricing component</title>
 </head>
+
 <body>
-
-  Simple, traffic-based pricing
-  Sign-up for our 30-day trial. No credit card required. 
-
-  Pageviews
-  $ /month
-
-  Monthly Billing
-  Yearly Billing 25% discount
-
-  Unlimited websites
-  100% data ownership
-  Email reports
-
-  Start my trial
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    <div class="frame">
+        <div class="header">
+            <h1 class="header__title">Simple, traffic-based pricing</h1>
+            <p class="header__description">Sign-up for our 30-day trial. No credit card required.</p>
+        </div>
+        <section class="trial-picker">
+            <div class="trial-picker__price-picker">
+                <div class="trial-picker__pageviews">100k pagewievs</div>
+                <div class="trial-picker__price">
+                    <span class="value">$<span class="dolars">16</span>.00</span>/<span class="frequency">month</span>
+                    <input type="range" class="trial-picker__input" min="0" max="100">
+                </div>
+            </div>
+            <div class="trial-picker__frequency-picker">
+                Monthly Billing
+                <label class="trial-picker__switch">
+                  <input type="checkbox">
+                  <span class="trial-picker__slider"></span>
+                </label> Yearly Billing
+                <span class="trail-picker__discount">25% discount</span>
+            </div>
+            <div class="l-flex">
+                <ul class="trial-picker__benefits">
+                    <li>
+                        <img src="./src/img/icon-check.svg" alt="check icon">
+                        <p>Unlimited websites</p>
+                    </li>
+                    <li>
+                        <img src="./src/img/icon-check.svg" alt="check icon">
+                        <p>100% data ownership</p>
+                    </li>
+                    <li>
+                        <img src="./src/img/icon-check.svg" alt="check icon">
+                        <p>Email reports</p>
+                    </li>
+                </ul>
+                <button class="trial-picker__start-button">Start my trial</button>
+            </div>
+        </section>
+    </div>
 </body>
+
 </html>
