--- a/index.html
+++ b/index.html
@@ -26,22 +26,22 @@
                 <div class="window__price-picker">
                     <p class="window__pageviews">100k pagewievs</p>
                     <div class="window__price">
-                        <span class="value">$<span class="dolars">16</span>.00</span>/<span class="frequency">month</span>
+                        <span class="value">$<span class="dolars">55</span>.00</span>/<span class="frequency">month</span>
                     </div>
                     <div class="window__input-wrapper">
                         <input type="range" class="price-range-input" min="10" max="100" step="1" value="55">
                     </div>
                 </div>
                 <div class="window__frequency-picker">
-                    <p>Monthly Billing</p>
-                    <label class=".btn-toggle">
+                    <p data-monthly class="active">Monthly Billing</p>
+                    <label class="btn-toggle">
                         <input type="checkbox">
-                        <span class="window__slider"></span>
+                        <span class="btn-toggle__slider"></span>
                     </label>
-                    <p>Yearly Billing</p>
+                    <p data-yearly>Yearly Billing</p>
                     <p class="window__discount">25% <span class="discount-word">discount</span></p>
                 </div>
-                <!-- <div class="l-flex">
+                <div class="l-flex">
                     <ul class="window__benefits">
                         <li>
                             <img src="./src/img/icon-check.svg" alt="check icon">
@@ -57,7 +57,7 @@
                         </li>
                     </ul>
                     <button class="window__start-button cta-button">Start my trial</button>
-                </div> -->
+                </div>
             </div>
         </section>
     </div>
