--- a/index.html
+++ b/index.html
@@ -1,66 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- displays site properly based on user's device -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-    <link rel="icon" type="image/png" sizes="32x32" href="./src/img/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  
+  <title>Frontend Mentor | [Challenge Name Here]</title>
 
-    <title>Frontend Mentor | Interactive pricing component</title>
+  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <style>
+    .attribution { font-size: 11px; text-align: center; }
+    .attribution a { color: hsl(228, 45%, 44%); }
+  </style>
 </head>
-
 <body>
-    <div class="frame">
-        <section class="pricing-component">
-            <div class="heading">
-                <div class="heading__circles-wrapper">
-                    <img src="./src/img/pattern-circles.svg" alt="two circles">
-                </div>
-                <h1 class="heading__title">Simple, traffic-based pricing</h1>
-                <p class="heading__description">Sign-up for our 30-day trial. No credit card required.</p>
-            </div>
 
-            <div class="window">
-                <div class="window__price-picker">
-                    <p class="window__pageviews">100k pagewievs</p>
-                    <div class="window__price">
-                        <span class="value">$<span class="dolars">55</span>.00</span>/<span class="frequency">month</span>
-                    </div>
-                    <div class="window__input-wrapper">
-                        <input type="range" class="price-range-input" min="10" max="100" step="1" value="55">
-                    </div>
-                </div>
-                <div class="window__frequency-picker">
-                    <p data-monthly class="active">Monthly Billing</p>
-                    <label class="btn-toggle">
-                        <input type="checkbox">
-                        <span class="btn-toggle__slider"></span>
-                    </label>
-                    <p data-yearly>Yearly Billing</p>
-                    <p class="window__discount">25% <span class="discount-word">discount</span></p>
-                </div>
-                <div class="l-flex">
-                    <ul class="window__benefits">
-                        <li>
-                            <img src="./src/img/icon-check.svg" alt="check icon">
-                            <p>Unlimited websites</p>
-                        </li>
-                        <li>
-                            <img src="./src/img/icon-check.svg" alt="check icon">
-                            <p>100% data ownership</p>
-                        </li>
-                        <li>
-                            <img src="./src/img/icon-check.svg" alt="check icon">
-                            <p>Email reports</p>
-                        </li>
-                    </ul>
-                    <button class="window__start-button cta-button">Start my trial</button>
-                </div>
-            </div>
-        </section>
-    </div>
+  Social Media Dashboard
+  Total Followers: 23,004
+
+  Dark Mode
+
+  
+
+  @nathanf
+  1987
+  Followers
+  12 Today
+
+  @nathanf
+  1044
+  Followers
+  99 Today
+
+  @realnathanf
+  11k
+  Followers
+  1099 Today
+
+  Nathan F.
+  8239
+  Subscribers
+  144 Today
+
+
+
+  Overview - Today
+
+  Page Views
+  87
+  3%
+
+  Likes
+  52
+  2%
+
+  Likes
+  5462
+  2257%
+
+  Profile Views
+  52k
+  1375%
+
+  Retweets
+  117
+  303%
+
+  Likes
+  507
+  553%
+
+  Likes
+  107
+  19%
+
+  Total Views
+  1407
+  12%
+  
+  <div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="#">Your Name Here</a>.
+  </div>
 </body>
-
 </html>
