--- a/index.html
+++ b/index.html
@@ -8,215 +8,14 @@
 
     <link rel="icon" type="image/png" sizes="32x32" href="./src/img/favicon-32x32.png">
 
-    <title>Frontend Mentor | Pan Karton</title>
+    <title>Frontend Mentor | Calculator app</title>
 </head>
 
 <body>
-    <div class="social-media-dashboard">
-        <main>
 
-            <section class="followers-stats-wrapper">
-                <div class="header">
-                    <div class="header__heading-wrapper">
-                        <h1 class="header__title">Social Media Dashboard</h1>
-                        <p class="header__followers-counter">Total Followers: 23,004</p>
-                    </div>
-                    <div class="header__theme-switcher-wrapper">
-                        <label data-toggle-switch class="toggle-switch-component">
-                            <input type="checkbox">
-                            <span class="slider"></span>
-                        </label>
-                        <p class="header__theme-name">Dark Mode</p>
-                    </div>
-                </div>
-                <div class="l-flex">
-                    <div class="followers-card followers-card--facebook">
-                        <div class="followers-card__social-medium">
-                            <div class="followers-card__sm-logo-wrapper">
-                                <img src="./src/img/icon-facebook.svg" alt="facebook logo blue letter f">
-                            </div>
-                            <p class="followers-card__sm-name">@pankarton</p>
-                        </div>
-                        <div class="followers-card_followers-counter">
-                            <p class="followers-card__followers-number">1987</p>
-                            <p class="followers-card__followers-word">Followers</p>
-                        </div>
-                        <div class="followers-card__followers-inctease-wrapper">
-                            <div class="followers-card__arrow-img-wrapper">
-                                <img src="./src/img/icon-up.svg" alt="arrow up">
-                            </div>
-                            <p class="followers-card__daily-amount followers-card__daily-amount--increase">12 Today</p>
-                        </div>
-                    </div>
-                    <div class="followers-card followers-card--twitter">
-                        <div class="followers-card__social-medium">
-                            <div class="followers-card__sm-logo-wrapper">
-                                <img src="./src/img/icon-twitter.svg" alt="twitter logo blue bird">
-                            </div>
-                            <p class="followers-card__sm-name">@pankarton</p>
-                        </div>
-                        <div class="followers-card_followers-counter">
-                            <p class="followers-card__followers-number">1044</p>
-                            <p class="followers-card__followers-word">Followers</p>
-                        </div>
-                        <div class="followers-card__followers-inctease-wrapper">
-                            <div class="followers-card__arrow-img-wrapper">
-                                <img src="./src/img/icon-up.svg" alt="arrow up">
-                            </div>
-                            <p class="followers-card__daily-amount followers-card__daily-amount--increase">99 Today</p>
-                        </div>
-                    </div>
-                    <div class="followers-card followers-card--instagram">
-                        <div class="followers-card__social-medium">
-                            <div class="followers-card__sm-logo-wrapper">
-                                <img src="./src/img/icon-instagram.svg" alt="instagram logo yellow and pink camera">
-                            </div>
-                            <p class="followers-card__sm-name">@pankarton</p>
-                        </div>
-                        <div class="followers-card_followers-counter">
-                            <p class="followers-card__followers-number">11k</p>
-                            <p class="followers-card__followers-word">Followers</p>
-                        </div>
-                        <div class="followers-card__followers-inctease-wrapper">
-                            <div class="followers-card__arrow-img-wrapper">
-                                <img src="./src/img/icon-up.svg" alt="arrow up">
-                            </div>
-                            <p class="followers-card__daily-amount followers-card__daily-amount--increase">1099 Today</p>
-                        </div>
-                    </div>
-                    <div class="followers-card followers-card--youtube">
-                        <div class="followers-card__social-medium">
-                            <div class="followers-card__sm-logo-wrapper">
-                                <img src="./src/img/icon-facebook.svg" alt="facebook logo">
-                            </div>
-                            <p class="followers-card__sm-name">Pan Karton</p>
-                        </div>
-                        <div class="followers-card_followers-counter">
-                            <p class="followers-card__followers-number">8239</p>
-                            <p class="followers-card__followers-word">Followers</p>
-                        </div>
-                        <div class="followers-card__followers-inctease-wrapper">
-                            <div class="followers-card__arrow-img-wrapper">
-                                <img src="./src/img/icon-down.svg" alt="arrow down">
-                            </div>
-                            <p class="followers-card__daily-amount followers-card__daily-amount--decrease">144 Today</p>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <section class="today-stats">
-                <h2 class="today-stats__heading">Overview - Today</h2>
-                <div class="today-stats__cointainer l-flex">
-                    <div class="daily-card">
-                        <div class="daily-card__half">
-                            <h3 class="daily-card__tile">Page Views</h3>
-                            <img src="./src/img/icon-facebook.svg" alt="facebook logo blue letter f">
-                        </div>
-                        <div class="daily-card__half">
-                            <p class="daily-card__counter">87</p>
-                            <div class="daily-card__percentage-change">
-                                <img src="./src/img/icon-up.svg" alt="up arrow">
-                                <div class="daily-card__percentage-number daily-card__percentage-number--increase">3%</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="daily-card">
-                        <div class="daily-card__half">
-                            <h3 class="daily-card__tile">Likes</h3>
-                            <img src="./src/img/icon-facebook.svg" alt="facebook logo blue letter f">
-                        </div>
-                        <div class="daily-card__half">
-                            <p class="daily-card__counter">52</p>
-                            <div class="daily-card__percentage-change">
-                                <img src="./src/img/icon-down.svg" alt="down arrow">
-                                <div class="daily-card__percentage-number daily-card__percentage-number--decrease">2%</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="daily-card">
-                        <div class="daily-card__half">
-                            <h3 class="daily-card__tile">Likes</h3>
-                            <img src="./src/img/icon-instagram.svg" alt="instagram logo camera icon">
-                        </div>
-                        <div class="daily-card__half">
-                            <p class="daily-card__counter">5462</p>
-                            <div class="daily-card__percentage-change">
-                                <img src="./src/img/icon-up.svg" alt="up arrow">
-                                <div class="daily-card__percentage-number daily-card__percentage-number--increase">2257%</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="daily-card">
-                        <div class="daily-card__half">
-                            <h3 class="daily-card__tile">Profile Views</h3>
-                            <img src="./src/img/icon-instagram.svg" alt="instagram logo camera icon">
-                        </div>
-                        <div class="daily-card__half">
-                            <p class="daily-card__counter">52k</p>
-                            <div class="daily-card__percentage-change">
-                                <img src="./src/img/icon-up.svg" alt="up arrow">
-                                <div class="daily-card__percentage-number daily-card__percentage-number--increase">1375%</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="daily-card">
-                        <div class="daily-card__half">
-                            <h3 class="daily-card__tile">Retweets</h3>
-                            <img src="./src/img/icon-twitter.svg" alt="twitter logo bird icon">
-                        </div>
-                        <div class="daily-card__half">
-                            <p class="daily-card__counter">117</p>
-                            <div class="daily-card__percentage-change">
-                                <img src="./src/img/icon-up.svg" alt="up arrow">
-                                <div class="daily-card__percentage-number daily-card__percentage-number--increase">303%</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="daily-card">
-                        <div class="daily-card__half">
-                            <h3 class="daily-card__tile">Likes</h3>
-                            <img src="./src/img/icon-twitter.svg" alt="twitter logo bird icon">
-                        </div>
-                        <div class="daily-card__half">
-                            <p class="daily-card__counter">507</p>
-                            <div class="daily-card__percentage-change">
-                                <img src="./src/img/icon-up.svg" alt="up arrow">
-                                <div class="daily-card__percentage-number daily-card__percentage-number--increase">553%</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="daily-card">
-                        <div class="daily-card__half">
-                            <h3 class="daily-card__tile">Likes</h3>
-                            <img src="./src/img/icon-youtube.svg" alt="icon-youtube logo triangle in red rectangle icon">
-                        </div>
-                        <div class="daily-card__half">
-                            <p class="daily-card__counter">107</p>
-                            <div class="daily-card__percentage-change">
-                                <img src="./src/img/icon-down.svg" alt="down arrow">
-                                <div class="daily-card__percentage-number daily-card__percentage-number--decrease">19%</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="daily-card">
-                        <div class="daily-card__half">
-                            <h3 class="daily-card__tile">Total Views</h3>
-                            <img src="./src/img/icon-youtube.svg" alt="icon-youtube logo triangle in red rectangle icon">
-                        </div>
-                        <div class="daily-card__half">
-                            <p class="daily-card__counter">1407</p>
-                            <div class="daily-card__percentage-change">
-                                <img src="./src/img/icon-down.svg" alt="down arrow">
-                                <div class="daily-card__percentage-number daily-card__percentage-number--decrease">12%</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-        </main>
-    </div>
+
+
+
 </body>
-
-
 
 </html>
