validated html DONE

--- a/index.html
+++ b/index.html
@@ -13,7 +13,59 @@
 
 <body>
 
-
+    <div class="calculator">
+        <div class="header">
+            <h1 class="header__title">calc</h1>
+            <div class="header__theme-switcher-wrapper">
+                <p class="header__theme-word">theme</p>
+                <div class="theme-switcher l-flex">
+                    <ul class="theme-switcher__numbers">
+                        <li>
+                            <p class="theme-switcher__number">1</p>
+                        </li>
+                        <li>
+                            <p class="theme-switcher__number">2</p>
+                        </li>
+                        <li>
+                            <p class="theme-switcher__number">3</p>
+                        </li>
+                    </ul>
+                    <label class="theme-switcher__switch">
+                        <input type="checkbox">
+                        <span class="theme-switcher__slider"></span>
+                    </label>
+                </div>
+            </div>
+        </div>
+        <div class="screen">
+            <div class="screen__result-wrapper">
+                <p class="screen__result"></p>
+            </div>
+            <div class="screen__math-operation-wrapper">
+                <p class="screen__math-operation"></p>
+            </div>
+        </div>
+        <div class="keypad">
+            <button class="key">7</button>
+            <button class="key">8</button>
+            <button class="key">9</button>
+            <button class="key key--edit">del</button>
+            <button class="key">4</button>
+            <button class="key">5</button>
+            <button class="key">6</button>
+            <button class="key">+</button>
+            <button class="key">1</button>
+            <button class="key">2</button>
+            <button class="key">3</button>
+            <button class="key">-</button>
+            <button class="key">.</button>
+            <button class="key">0</button>
+            <button class="key">/</button>
+            <button class="key">*</button>
+            <button class="key key--edit key--long">reset</button>
+            <button class="key key--long key--result">=</button>
+        </div>
+    </div>
 
 
 </body>
