--- a/index.html
+++ b/index.html
@@ -12,62 +12,64 @@
 </head>
 
 <body>
-
-    <div class="calculator">
-        <div class="header">
-            <h1 class="header__title">calc</h1>
-            <div class="header__theme-switcher-wrapper">
-                <p class="header__theme-word">theme</p>
-                <div class="theme-switcher l-flex">
-                    <ul class="theme-switcher__numbers">
-                        <li>
-                            <p class="theme-switcher__number">1</p>
-                        </li>
-                        <li>
-                            <p class="theme-switcher__number">2</p>
-                        </li>
-                        <li>
-                            <p class="theme-switcher__number">3</p>
-                        </li>
-                    </ul>
-                    <label class="theme-switcher__switch">
-                        <input type="checkbox">
-                        <span class="theme-switcher__slider"></span>
-                    </label>
+    <section data-calculator class="blue-theme">
+        <div class="calculator">
+            <div class="header">
+                <h1 class="header__title">calc</h1>
+                <div class="header__theme-switcher-wrapper">
+                    <p class="header__theme-word">theme</p>
+                    <div class="theme-switcher l-flex">
+                        <ul class="theme-switcher__numbers">
+                            <li>
+                                <button data-number class="theme-switcher__number">1</button>
+                                <div class="bottom-hitbox"></div>
+                            </li>
+                            <li>
+                                <button data-number class="theme-switcher__number">2</button>
+                                <div class="bottom-hitbox"></div>
+                            </li>
+                            <li>
+                                <button data-number class="theme-switcher__number">3</button>
+                                <div class="bottom-hitbox"></div>
+                            </li>
+                        </ul>
+                        <label data-switcher class="theme-switcher__switch">
+                            <input type="checkbox">
+                            <span class="theme-switcher__slider"></span>
+                        </label>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="screen">
-            <div class="screen__result-wrapper">
-                <p class="screen__result"></p>
+            <div class="screen">
+                <div class="screen__result-wrapper">
+                    <p class="screen__result">70000</p>
+                </div>
+                <div class="screen__math-operation-wrapper">
+                    <p class="screen__math-operation">0.1+0.2</p>
+                </div>
             </div>
-            <div class="screen__math-operation-wrapper">
-                <p class="screen__math-operation"></p>
+            <div class="keypad">
+                <button class="key">7</button>
+                <button class="key">8</button>
+                <button class="key">9</button>
+                <button class="key key--edit">del</button>
+                <button class="key">4</button>
+                <button class="key">5</button>
+                <button class="key">6</button>
+                <button class="key">+</button>
+                <button class="key">1</button>
+                <button class="key">2</button>
+                <button class="key">3</button>
+                <button class="key">-</button>
+                <button class="key">.</button>
+                <button class="key">0</button>
+                <button class="key">/</button>
+                <button class="key">*</button>
+                <button class="key key--edit key--long">reset</button>
+                <button class="key key--long key--result">=</button>
             </div>
         </div>
-        <div class="keypad">
-            <button class="key">7</button>
-            <button class="key">8</button>
-            <button class="key">9</button>
-            <button class="key key--edit">del</button>
-            <button class="key">4</button>
-            <button class="key">5</button>
-            <button class="key">6</button>
-            <button class="key">+</button>
-            <button class="key">1</button>
-            <button class="key">2</button>
-            <button class="key">3</button>
-            <button class="key">-</button>
-            <button class="key">.</button>
-            <button class="key">0</button>
-            <button class="key">/</button>
-            <button class="key">*</button>
-            <button class="key key--edit key--long">reset</button>
-            <button class="key key--long key--result">=</button>
-        </div>
-    </div>
-
-
+    </section>
 </body>
 
 </html>
