show error if user wants to divide by 0

--- a/index.html
+++ b/index.html
@@ -30,13 +30,12 @@
                                 <button data-theme-number class="theme-switcher__number">3</button>
                             </li>
                         </ul>
-                        <label data-switcher class="theme-switcher__switch">
-                            <input type="checkbox">
-                            <span class="theme-switcher__slider"></span>
-                            <div data-switcher-hitbox class="hitbox"></div>
-                            <div data-switcher-hitbox class="hitbox"></div>
-                            <div data-switcher-hitbox class="hitbox"></div>
-                        </label>
+                        <div data-switch-wrapper class="theme-switcher__switch-wrapper">
+                            <label data-switcher class="theme-switcher__switch">
+                                <input type="checkbox">
+                                <span class="theme-switcher__slider"></span>
+                            </label>
+                        </div>
                     </div>
                 </div>
             </div>
