--- a/index.html
+++ b/index.html
@@ -1,74 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- displays site properly based on user's device -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-    <link rel="icon" type="image/png" sizes="32x32" href="./src/img/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  
+  <title>Frontend Mentor | Launch countdown timer</title>
 
-    <title>Frontend Mentor | Calculator app</title>
+  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <style>
+    .attribution { font-size: 11px; text-align: center; }
+    .attribution a { color: hsl(228, 45%, 44%); }
+  </style>
 </head>
-
 <body>
-    <section data-calculator>
-        <div class="calculator">
-            <div class="header">
-                <h1 class="header__title">calc</h1>
-                <div class="header__theme-switcher-wrapper">
-                    <p class="header__theme-word">theme</p>
-                    <div class="theme-switcher l-flex">
-                        <ul class="theme-switcher__numbers">
-                            <li>
-                                <button data-theme-number class="theme-switcher__number">1</button>
-                            </li>
-                            <li>
-                                <button data-theme-number class="theme-switcher__number">2</button>
-                            </li>
-                            <li>
-                                <button data-theme-number class="theme-switcher__number">3</button>
-                            </li>
-                        </ul>
-                        <div data-switch-wrapper class="theme-switcher__switch-wrapper">
-                            <label data-switcher class="theme-switcher__switch">
-                                <input type="checkbox">
-                                <span class="theme-switcher__slider"></span>
-                            </label>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="screen">
-                <div class="screen__prev-operand-wrapper">
-                    <p data-prev-operand class="screen__prev-operand"></p>
-                </div>
-                <div class="screen__current-operand-wrapper">
-                    <p data-current-operand class="screen__current-operand"></p>
-                </div>
-            </div>
-            <div class="keypad">
-                <button data-number class="key">7</button>
-                <button data-number class="key">8</button>
-                <button data-number class="key">9</button>
-                <button data-delete class="key key--edit">del</button>
-                <button data-number class="key">4</button>
-                <button data-number class="key">5</button>
-                <button data-number class="key">6</button>
-                <button data-operation class="key">+</button>
-                <button data-number class="key">1</button>
-                <button data-number class="key">2</button>
-                <button data-number class="key">3</button>
-                <button data-operation class="key">-</button>
-                <button data-number class="key">.</button>
-                <button data-number class="key">0</button>
-                <button data-operation class="key">/</button>
-                <button data-operation class="key">*</button>
-                <button data-reset class="key key--edit key--long">reset</button>
-                <button data-equals class="key key--long key--result">=</button>
-            </div>
-        </div>
-    </section>
-</body>
 
+  We're launching soon
+
+  Days
+  Hours
+  Minutes
+  Seconds
+  
+  <div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="#">Your Name Here</a>.
+  </div>
+</body>
 </html>
